framec_tests/language_specific/csharp/v3_facade_smoke/negative/strict_multi_errors.frm
@target csharp

system S {
    machine:
        $A {
            e() {
                -> $B();
                List<int x;     // missing '>'
                int y = ;       // missing initializer
                if ( { ) { }    // malformed if
            }
        }
        $B {
        }
}

